--- a/sass/app.scss
+++ b/sass/app.scss
@@ -4,4 +4,9 @@
 @import "typography";
 @import "header";
 @import "hero";
+@import "form";
 @import "service";
+@import "feature";
+@import "experience";
+@import "customer";
+@import "footer";
