--- a/sass/_hero.scss
+++ b/sass/_hero.scss
@@ -7,20 +7,20 @@
     padding-top: 487px;
   }
   &-heading {
+    position: relative;
     background: rgba(254, 0, 0, 0.6);
     padding: 5px 0;
     margin-bottom: 20px;
+    display: inline-block;
   }
   &-desc {
     background: rgba(0, 0, 0, 0.8);
-    margin-bottom: 87px;
+    padding: 6px 0;
+    display: inline-block;
   }
-  &-form {
+  &-title {
+    display: flex;
+    align-items: flex-start;
+    flex-direction: column;
   }
-}
-.form {
-  max-width: 400px;
-  max-width: 640px;
-  border-radius: 3px;
-  background: plum;
 }
