--- a/sass/app.scss
+++ b/sass/app.scss
@@ -3,10 +3,14 @@
 @import "global";
 @import "typography";
 @import "header";
-@import "hero";
+@import "./fujico/hero";
+@import "./fujico2/hero2";
 @import "form";
 @import "service";
-@import "feature";
-@import "experience";
-@import "customer";
+@import "./fujico/feature";
+@import "./fujico2/feature2";
+@import "./fujico/experience";
+@import "./fujico2/experience2";
+@import "./fujico/customer";
+@import "./fujico2/fsqs";
 @import "footer";
