--- a/sass/_typography.scss
+++ b/sass/_typography.scss
@@ -41,4 +41,9 @@
     line-height: normal;    
     color: $while-color;
   }
+  &-s18b {
+    color: $black-color;
+    font-size: 18px;
+    line-height: normal;
+  }
 }
