--- a/sass/fujico/_feature.scss
+++ b/sass/fujico/_feature.scss
@@ -4,21 +4,21 @@
 }
 
 .feature {
-  &-main{
+  &-main {
     position: relative;
     z-index: 99;
-    &::after{
+
+    &::after {
       content: " ";
       width: 381px;
       height: 795px;
       top: 0;
       transform: skew(-29.792deg);
-      background: #F2F2F2;
+      background: #f2f2f2;
       flex-shrink: 0;
       position: absolute;
       left: 21%;
       z-index: -1;
-      
     }
   }
   &-heading {
@@ -105,7 +105,6 @@
       text-transform: uppercase;
     }
   }
-  
 }
 .feature-text {
   color: #333;
@@ -120,6 +119,7 @@
     &:hover {
       background: white;
       box-shadow: 5px 5px 10px 0px rgba(0, 0, 0, 0.1);
+      transition: all 0.2s linear;
     }
   }
 }
